--- a/sabinatodo.html
+++ b/sabinatodo.html
@@ -3,17 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Luxurious+Roman&family=Montserrat:wght@200&display=swap" rel="stylesheet">"
     <title>Sabina To do list</title>
+    <link rel="stylesheet" href="sabinatodo.css">
 </head>
 <body>
     <h1>To read list</h1>
     <form id="toreadform">
         <input type="text" id="book" placeholder="Add a new book" required>
-        <button type="submit">Add</button>
+        <button type="submit">Add book</button>
     </form>
     <ul id="toreadlist">
 
     </ul>
-    <script src="sabtodo.js"></script>
+    <script src="sabinatodo.js"></script>
 </body>
 </html>
