--- a/indexNew.html
+++ b/indexNew.html
@@ -11,7 +11,7 @@
     <section class="vh-100" style="background-color: #eee;">
         <div class="container py-5 h-100" >
             <div class="row justify-content-center ">
-                <div class="col col-lg-9 col-xl-7">
+                <div class="col-12 col-md-10 col-lg-9 col-xl-7"> <!--I added col-12 col-md-10. It had also the class col and I removed it-->
                     <div class="card rounded-3">
                         <div class="card-body p-4">
 
@@ -36,19 +36,22 @@
                                   <!--get tasks button-->
                             </form>
 
-                            <table class="table mb-4">
-                                <thead id="t-head">
-                                <tr id="t-row">
-                                    <th scope="col" id="item-no">No.</th>
-                                    <th scope="col" id="to-do-item">Todo item</th>
-                                    <th scope="col" id="status">Status</th>
-                                    <th scope="col" id="actions">Actions</th>
-                                </tr>
-                                </thead>
-                                <tbody id="task-list">
-                                    <!-- Task items will be inserted here -->
-                                </tbody>
-                            </table>
+                            <div class="table responsive"> <!-- Added the Responsive table wrapper - to make the table responsive -->
+                                <table class="table mb-4">
+                                    <thead id="t-head">
+                                    <tr id="t-row">
+                                        <th scope="col" id="item-no">No.</th>
+                                        <th scope="col" id="to-do-item">Todo item</th>
+                                        <th scope="col" id="status">Status</th>
+                                        <th scope="col" id="actions">Actions</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody id="task-list">
+                                        <!-- Task items will be inserted here -->
+                                    </tbody>
+                                </table>
+
+                            </div>   
 
                         </div>
                     </div>
