--- a/listSabina.html
+++ b/listSabina.html
@@ -22,7 +22,7 @@
 		<!--Navbar-->
 		<nav class="navbar navbar-expand-lg bg-dark navbar-dark py-4 fixed-top">
 			<div class="container">
-				<a href=“#“ class="navbar-brand">TO DO</a>
+				<a href=“main.html“ class="navbar-brand">TO DO</a>
 
 				<button
 					class="navbar-toggler"
@@ -36,16 +36,16 @@
 				<div class="collapse navbar-collapse" id="navmenu">
 					<ul class="navbar-nav ms-auto">
 						<li class="nav-item">
-							<a href="#" class="nav-link">Mihaela's List</a>
+							<a href="listMihaela.html" class="nav-link">Mihaela's List</a>
 						</li>
 						<li class="nav-item">
-							<a href="#" class="nav-link">Sabina's List</a>
+							<a href="listSabina.html" class="nav-link">Sabina's List</a>
 						</li>
 						<li class="nav-item">
-							<a href="#" class="nav-link">Valentijn's List</a>
+							<a href="listValentijn.html" class="nav-link">Valentijn's List</a>
 						</li>
 						<li class="nav-item">
-							<a href="#" class="nav-link">Andrii's List</a>
+							<a href="listAndrii.html" class="nav-link">Andrii's List</a>
 						</li>
 					</ul>
 				</div>
