--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 		<!--Navbar-->
 		<nav class="navbar navbar-expand-lg bg-dark navbar-dark py-4 fixed-top">
 			<div class="container">
-				<a href=“main.html“ class="navbar-brand">TO DO</a>
+				<a href="main.html" class="navbar-brand">TO DO</a>
 
 				<button
 					class="navbar-toggler"
