--- a/sabinatodo.html
+++ b/sabinatodo.html
@@ -13,6 +13,7 @@
     <h1>To Read List</h1>
     <form id="toreadform">
         <input type="text" id="book" placeholder="Add a new book" required>
+        <!--The "please fill in this field" message is a default validation message provided by the browser when I try to submit a empty field in the form.-->
         <button type="submit">Add book</button>
     </form>
     <ul id="toreadlist">
