--- a/main.html
+++ b/main.html
@@ -35,13 +35,13 @@
 
 				<div class="collapse navbar-collapse" id="navmenu">
 					<ul class="navbar-nav ms-auto">
-						<li class="nav-item">
+						<li class="nav-item me-3">
 							<a href="listMihaela.html" class="nav-link">Mihaela's List</a>
 						</li>
-						<li class="nav-item">
+						<li class="nav-item me-3">
 							<a href="listSabina.html" class="nav-link">Sabina's List</a>
 						</li>
-						<li class="nav-item">
+						<li class="nav-item me-3">
 							<a href="listValentijn.html" class="nav-link">Valentijn's List</a>
 						</li>
 						<li class="nav-item">
