--- a/andriiList/index.html
+++ b/andriiList/index.html
@@ -50,6 +50,14 @@
       <button class="btn btn-primary" type="submit">Add</button>
     </div>
   </form>
+  <div class="row text-lg-end mt-2 w-50">
+    <select class="form-select bg-transparent" name="sorting" id="sort-list">
+      <option selected disabled value="">Sort by</option>
+      <option value="sort-priority">Priority</option>
+      <option value="sort-date">Date</option>
+      <option value="sort-time">Time of adding</option>
+    </select>
+  </div>
   <div class="row">
     <div class="col-10">
       <ol class="list-group" id="list-elements">
