--- a/main.html
+++ b/main.html
@@ -39,7 +39,7 @@
 							<a href="listMihaela.html" class="nav-link">Mihaela's List</a>
 						</li>
 						<li class="nav-item">
-							<a href="listSabina.html" class="nav-link">Sabina's List</a>
+							<a href="sabinatodo.html" class="nav-link">Sabina's List</a>
 						</li>
 						<li class="nav-item">
 							<a href="listValentijn.html" class="nav-link">Valentijn's List</a>
